--- a/.local.env
+++ b/.local.env
@@ -4,3 +4,6 @@ DATABASE_NAME=authentication
 DATABASE_USER=study
 DATABASE_PASSWORD=auth1234!
 APPLICATION_PORT=8080
+
+JWT_KEY=auth-study
+JWT_EXPIRES=24h
